
cc_library(
	name = "compute",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_algorithm//:algorithm",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_tuple//:tuple",
		"@com_github_bazelboost_filesystem//:filesystem",
		"@com_github_bazelboost_uuid//:uuid",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_proto//:proto"
	],
)
